--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,29 @@ footer nav a {
   
 }
 
+@media (max-width: 1200px) {
+  section.card {
+    grid-template-columns: repeat(3, 1fr);
+    
+    gap: 25px;
+    margin: 48px auto;
+    padding: 0 16px;
+  }
+
+  .altri-parchi {
+    grid-template-columns: repeat(3, 1fr);
+ 
+    gap: 20px;
+    margin: 20px auto;
+    padding: 0 16px;
+  }
+
+  .carte {
+ 
+    padding: 48px 16px 24px;
+    gap: 48px;
+  }
+}
 
 @media (max-width: 768px) {
   
