--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:hover {
   line-height: 1.4;
   background-color: rgba(217, 217, 217,0.5);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 10px;
+  padding: 20px 20px 20px;
   border-radius: 8px;
   
 }
@@ -306,8 +306,7 @@ footer nav a {
   }
 
   .altri-parchi {
-    grid-template-columns: repeat(3, 1fr);
- 
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin: 20px auto;
     padding: 0 16px;
@@ -497,15 +496,20 @@ footer nav a {
 
   .box-testo,
   .carte,
-  .carte-layout,
   .altri-parchi,
   .attivita-ed-esperienze,
   .section.card {
     padding: 0 12px;
     gap: 16px;
-    max-width: 100%;
   }
 
+   .carte-layout {
+     padding: 0 12px;
+     gap: 16px;
+     max-width: 100%;
+   }
+
+  
   .img-carte img,
   .box-immagini img,
   .card img,
@@ -549,16 +553,16 @@ footer nav a {
 
 
 .paragrafo {
-  max-width: 70%;
-  margin: 6% auto;  
+   max-width: 85%;
+  margin:auto;   
  
 }
 
 .paragrafo p {
-  max-width: 70%;
+  max-width: 82%;
   margin: 5% auto; 
-  font-size: 22px;
-  text-align: center; 
+  font-size: 20px;
+  text-align: left;  
 }
 
 
@@ -576,6 +580,7 @@ footer nav a {
   margin: 0;
   margin-left: 5%;
   font-size: 18px;
+  font-weight:bold
 }
 
 .nav-bar a:first-of-type {
@@ -588,6 +593,7 @@ footer nav a {
   font-size: 14px;
   margin: 0;
   margin-right: 5%;
+  font-weight:500;
   
 }
 
@@ -603,11 +609,14 @@ footer nav a {
 
 .content h1 {
   font-size: 26px;
+  margin:0;
 }
 
 
 .content p {
   font-size: 20px;
+  font-weight:600;
+   margin:0;
  }
 
 .prova-img {
