--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ footer nav a {
     gap: 16px;
   }
 
-   .carte-layout {
+   .carte {
      padding: 0 12px;
      gap: 16px;
      max-width: 100%;
