--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,32 @@ footer nav a {
     font-size: 14px;
     text-align:left;
   }
+  .attivita-ed-esperienze {
+    grid-template-columns: repeat(1, 1fr); 
+    max-width: 70%; 
+    gap: 24px; 
+    margin: 32px auto;
+    padding: 0 16px 20px;
+  }
+
+  .box-testo h2,
+  .box-testo p,
+  .box-testo a {
+    font-size: 16px; 
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 12px;
+    
+  }
+
+  .box-immagini {
+    gap: 16px; 
+    flex-wrap: wrap; 
+  }
+
+  .box-immagini img {
+    height: auto; 
+    max-height: 300px;
+  }
 }
 
 @media (max-width: 850px) {
