--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ section.intro {
   font-size: 18px;
   margin-bottom: 15px;
   line-height: 1.5;
-  padding: 20px;
+  padding: 20px 20px 20px 20px;
   align-items: center;
   align-content: center;
   
@@ -269,7 +269,7 @@ section.intro {
 .nome-sezione h1 {
   max-width: 70%; 
   margin: 48px auto;
-  font-size: 24px;
+  font-size: 30px;
   font-weight: bold;
 
 }
