--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family: 'Instrument Sans', sans-serif;
   background-color: #fff;
   margin: 0;
   padding: 0;
@@ -21,14 +22,34 @@ a:hover {
   text-decoration: underline;
 }
 
+ul {
+  line-height: 1.6;
+  padding-left: 1.5rem; 
+}
 
+ul li {
+  margin-bottom: 14px;
+}
+
+.scopri {
+  display: flex;
+  justify-content: center; 
+  align-items: center;    
+
+}
+
+.scopri a {
+  text-decoration: underline;
+  color: #101129;
+  font-weight: bold;
+}
 
 .carte {
   display: flex;
   flex-direction: column;
   gap: 64px;
   padding: 64px 16px 32px; 
-  max-width: 70%;
+  max-width: 1100px;
   margin: auto;
   
 }
@@ -64,9 +85,9 @@ a:hover {
 
 .p-carte {
   font-size: 16px;
-  line-height: 1.4;
-  background-color: rgba(217, 217, 217,0.5);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  line-height: 1.5;
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   padding: 20px 20px 20px;
   border-radius: 8px;
   
@@ -89,11 +110,55 @@ a:hover {
 
 section.card {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  max-width: 70%; 
+  grid-template-columns: repeat(4, 1fr);
+  max-width: 1100px ; 
   margin: 48px auto;
   gap: 30px;
   
+}
+
+
+.date-regioni {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  max-width: 1100px; 
+  margin: 48px auto;
+  gap: 30px;
+
+}
+
+.date-regioni img,
+.date-regioni img {
+  height: 250px;
+  width: 100%;
+  border-radius: 8px;
+}
+
+.date-regioni p,
+.date-regioni .text-box p {
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  height: 45px;
+  align-items: center;
+  align-content: center;
+  padding: 30px 30px 30px 30px;
+ border-radius: 8px;
+  
+}
+
+.date-regioni .text a {
+  color: #101129;
+  font-weight: bold ;
+}
+
+.date-regioni div {
+  border-radius: 10px;
+  padding: 0 0 5px;
+  height: auto;
 }
 
 .card img,
@@ -109,8 +174,8 @@ section.card p,
   font-size: 16px;
   font-weight: bold;
   text-align: center;
-  background-color: #d9d9d9;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   height: 45px;
   align-items: center;
   align-content: center;
@@ -130,6 +195,13 @@ section.card div {
   height: auto;
 }
 
+.sezione-sfondo {
+  background-color: #f5f5dc; 
+  padding: 30px 20px;        
+  width: 100%;
+  box-sizing: border-box;  
+}
+
 section.intro {
   margin: auto;
   font-size: 18px;
@@ -138,7 +210,7 @@ section.intro {
 }
 
 .content {
-  max-width: 70%; 
+  max-width: 1100px; 
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -169,14 +241,6 @@ section.intro {
   color: #101129;
 }
 
-.card .text-box {
-  background-color: #CEF17B;
-}
-
-.blocco .text-box {
-  background-color: #D5EFE6;
-}
-
 .card .text-box h2,
 .blocco .text-box h2 {
   font-size: 30px;
@@ -190,20 +254,20 @@ section.intro {
   line-height: 1.5;
 }
 
-.attivita-ed-esperienze {
+.sezione-storia {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: center;
   align-items: stretch; 
-  max-width: 70%;
+  max-width: 1100px;
   margin: 48px auto;
   padding-bottom: 20px;
   gap: 30px; 
 }
 
 .box-testo {
-  background-color: #d9d9d9;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   border-radius: 12px;
   width: 100%;
   height: 100%; 
@@ -226,7 +290,7 @@ section.intro {
 }
 
 .box-testo a {
-  color: #084734;
+  color: #101129;
   font-weight: bold;
   text-decoration: underline;
 }
@@ -247,31 +311,19 @@ section.intro {
 }
 
 
-.altri-parchi {
-  display: grid;
-  max-width: 70%;
-  margin: 0 auto;
-  gap: 20px; 
-  grid-template-columns: repeat(4, 1fr); 
-  margin-top: 3%;
-  margin-bottom: 3%;
-}
-
-.testo-parco {
-  background-color: #CEF17B;
-  padding: 15px;
-  border-radius: 10px;
-  font-weight: bold;
-  text-align: center;
-  font-size: 16px; 
-}
-
-.nome-sezione h1 {
-  max-width: 70%; 
+.nome-sezione1{
+  max-width: 1100px; 
   margin: 48px auto;
-  font-size: 30px;
+  font-size: 18px;
   font-weight: bold;
+}
 
+
+.nome-sezione a {
+  text-decoration: underline;
+  color: #2E2D2D;
+  font-weight:bold;
+  margin: 48px auto;
 }
 
 footer {
@@ -296,40 +348,59 @@ footer nav a {
   
 }
 
+
+
 @media (max-width: 1500px) {
   section.card {
-    grid-template-columns: repeat(3, 1fr);
-    
+    grid-template-columns: repeat(2, 1fr);
     gap: 25px;
     margin: 48px auto;
     padding: 0 16px;
+    max-width: 60%;
   }
-
-  .altri-parchi {
-    grid-template-columns: repeat(2, 1fr);
+  
+  .date-regioni {
+   grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin: 20px auto;
     padding: 0 16px;
+    max-width: 60%;
+  }
+  .nome-sezione1{
+    max-width: 60%;
+    font-size: 18px;
   }
 
+  .nome-sezione{
+    max-width: 100%;
+    font-size: 18px;
+    
+  }
+
+  .nome-sezione a {
+    max-width: 100%;
+    font-size: 16px;
+    
+  }
   .carte {
- 
     padding: 48px 16px 24px;
     gap: 48px;
   }
-   .content h1 {
+
+  .content h1 {
     font-size: 18px;
     text-align:left;
     
   }
 
-   .content p {
+  .content p {
     font-size: 14px;
     text-align:left;
   }
- .attivita-ed-esperienze {
+
+ .sezione-storia {
     grid-template-columns: repeat(3, 1fr); 
-    max-width: 70%; 
+    max-width: 60%; 
     gap: 24px; 
     margin: 32px auto;
     padding: 0 16px 20px;
@@ -359,11 +430,12 @@ footer nav a {
   }
 }
 
+
+
 @media (max-width: 850px) {
-  
   header,
   footer {
-    flex-direction: row; 
+    flex-direction: row;
     align-items: center;
     text-align: center;
     gap: 30px;
@@ -375,21 +447,7 @@ footer nav a {
     gap: 30px;
   }
 
-
-  .content h1 {
-    font-size: 18px;
-    text-align:left;
-    
-  }
-
-   .content p {
-    font-size: 14px;
-    text-align:left;
-  }
-
- 
   section.card {
-    display: grid;
     grid-template-columns: 1fr;
     gap: 16px;
     padding: 0 16px;
@@ -400,7 +458,6 @@ footer nav a {
     padding: 20px;
   }
 
- 
   .card,
   .blocco {
     flex-direction: column;
@@ -428,11 +485,10 @@ footer nav a {
     font-size: 16px;
   }
 
-
-  .attivita-ed-esperienze {
+  .sezione-storia {
     grid-template-columns: 1fr;
-     padding: 30px 10px;
-     gap: 20px;
+    gap: 20px;
+    padding: 30px 10px;
   }
 
   .box-testo h2,
@@ -451,21 +507,12 @@ footer nav a {
     height: auto;
   }
 
-
-  .altri-parchi {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 16px;
+  .nome-sezione h1 {
+    font-size: 24px;
     padding: 0 16px;
   }
 
-  .testo-parco {
-    font-size: 14px;
-    padding: 16px;
-  }
-
-  
-  .nome-sezione h1 {
+    .nome-sezione h1 {
     font-size: 24px;
     padding: 0 16px;
   }
@@ -504,15 +551,19 @@ footer nav a {
     height: auto;
     border-radius: 6px;
   }
+
+  .date-regioni {
+    grid-template-columns: 1fr;
+    gap: 16px;
+    padding: 0 16px;
+  }
+
 }
 
 
-
 @media (max-width: 480px) {
-  
   .content h1 {
     font-size: 16px;
-   
   }
 
   .content p,
@@ -524,58 +575,38 @@ footer nav a {
     font-size: 14px;
   }
 
-  .nome-sezione h1,
+  .nome-sezione,
+  .nome-sezione1,
   .card .text-box h2,
   .blocco .text-box h2,
   .h2-carte h2 {
     font-size: 20px;
   }
 
-  .h2-carte h2{
-   padding-top: 16px;
+  .h2-carte h2 {
+    padding-top: 16px;
   }
-    
 
-  .box-testo,
   .carte,
-  .altri-parchi,
-  .attivita-ed-esperienze,
+  .sezione-storia,
+  .box-testo,
+  .date-regioni,
   .section.card {
     padding: 0 12px;
     gap: 16px;
   }
 
-   .carte {
-     padding: 0 12px;
-     gap: 16px;
-     max-width: 100%;
-   }
+  .carte {
+    padding: 0 12px;
+    gap: 16px;
+    max-width: 100%;
+  }
 
-  
   .img-carte img,
   .box-immagini img,
   .card img,
   .blocco img {
     border-radius: 8px;
-  }
-
-  .box-immagini {
-    gap: 16px;
-  }
-
-  .attivita-ed-esperienze {
-    grid-template-columns: 1fr;
-    gap: 16px;
-    padding: 0 10px;  
-    width: 100%;  
-  }
-
-  .box-testo h2 {
-    font-size: 18px;
-  }
-
-  .box-testo p {
-    font-size: 14px;
   }
 
   .box-immagini {
@@ -588,25 +619,25 @@ footer nav a {
     width: 100%;
     height: auto;
   }
+
+  .sezione-storia {
+    grid-template-columns: 1fr;
+    gap: 16px;
+    padding: 0 10px;
+    width: 100%;
+  }
+
+  .box-testo h2 {
+    font-size: 18px;
+  }
+
+  .box-testo p {
+    font-size: 14px;
+  }
 }
 
 
 
-
-
-.paragrafo {
-   max-width: 85%;
-  margin:auto;   
- 
-}
-
-.paragrafo p {
-  max-width: 82%;
-  margin: 1em auto; 
-  font-size: 20px;
-  text-align: left;
-  margin-top: 2em;
-}
 
 
 
@@ -631,13 +662,12 @@ footer nav a {
 }
 
 .nav-bar a {
- color: white;
+  color: white;
   text-decoration: none;
   font-size: 14px;
   margin: 0;
   margin-right: 5%;
-  font-weight:500;
-  
+  font-weight:500; 
 }
 
 .nav-bar a:hover {
@@ -645,7 +675,7 @@ footer nav a {
 }
 
 .content {
-  max-width: 80%;
+  max-width: 1200px;
   
   
 }
@@ -670,7 +700,7 @@ footer nav a {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image: url("../img/home\ section\ hero.jpg");
+  background-image: url("../img/home\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -702,11 +732,11 @@ footer nav a {
 }
 
 
-.header-contenitore-parchi {
+.header-contenitore-storia {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/parchi\ section\ hero.jpg");
+  background-image:url("../img/storia\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -715,7 +745,7 @@ footer nav a {
 
 }
 
-.header-contenitore-parchi::before {
+.header-contenitore-storia::before {
   content: "";
   position: absolute;
   top: 0;
@@ -727,11 +757,11 @@ footer nav a {
 }
 
 
-.header-contenitore-attivita {
+.header-contenitore-date {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/attività\ ed\ esperienze\ section\ hero.jpg");
+  background-image:url("../img/date\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -740,7 +770,7 @@ footer nav a {
 
 }
 
-.header-contenitore-attivita::before {
+.header-contenitore-date::before {
   content: "";
   position: absolute;
   top: 0;
@@ -751,11 +781,11 @@ footer nav a {
   z-index: 1;
 }
 
-.header-contenitore-sila {
+.header-contenitore-regioni {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/parco\ sila\ section\ hero.jpg");
+  background-image:url("../img/regioni\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -764,7 +794,7 @@ footer nav a {
 
 }
 
-.header-contenitore-sila::before {
+.header-contenitore-regioni::before {
   content: "";
   position: absolute;
   top: 0;
@@ -775,11 +805,11 @@ footer nav a {
   z-index: 1;
 }
 
-.header-contenitore-abruzzo {
+.header-contenitore-limone {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/parco\ abruzzo\ section\ hero.jpg");
+  background-image:url("../img/festa\ limone\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -788,7 +818,7 @@ footer nav a {
 
 }
 
-.header-contenitore-abruzzo::before {
+.header-contenitore-limone::before {
   content: "";
   position: absolute;
   top: 0;
@@ -799,11 +829,11 @@ footer nav a {
   z-index: 1;
 }
 
-.header-contenitore-toscano {
+.header-contenitore-giovanni {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/parco\ arcipelago\ toscano\ section\ hero.jpg");
+  background-image:url("../img/festa\ san\ giovanni\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -812,7 +842,7 @@ footer nav a {
 
 }
 
-.header-contenitore-toscano::before {
+.header-contenitore-giovanni::before {
   content: "";
   position: absolute;
   top: 0;
@@ -823,11 +853,11 @@ footer nav a {
   z-index: 1;
 }
 
-.header-contenitore-etna {
+.header-contenitore-cinghiale {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/parco\ etna\ section\ hero.jpeg");
+  background-image:url("../img/sagra\ cinghiale\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -836,7 +866,7 @@ footer nav a {
 
 }
 
-.header-contenitore-etna::before {
+.header-contenitore-cinghiale::before {
   content: "";
   position: absolute;
   top: 0;
@@ -847,11 +877,11 @@ footer nav a {
   z-index: 1;
 }
 
-.header-contenitore-vesuvio {
+.header-contenitore-pesce {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image:url("../img/parco\ vesuvio\ section\ hero.jpg");
+  background-image:url("../img/sagra\ pesce\ section\ hero.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -860,7 +890,55 @@ footer nav a {
 
 }
 
-.header-contenitore-vesuvio::before {
+.header-contenitore-pesce::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-succu {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/festa\ su\ succu\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-succu::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-cavallo {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/festa\ cavallo\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-cavallo::before {
   content: "";
   position: absolute;
   top: 0;
@@ -872,4 +950,267 @@ footer nav a {
 }
 
 
+.header-contenitore-palio {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/palio\ ticino\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
 
+
+}
+
+.header-contenitore-palio::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-ciliegie {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/sagra\ ciliegie\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-ciliegie::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-gnocco {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/sagra\ gnocco\ fritto\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-gnocco::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+
+.header-contenitore-polenta {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/sagra\ polenta\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-polenta::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-birra {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/bear\ fest\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-birra::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-peperoncino {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/peperoncino\ festival\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-peperoncino::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-nduja {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/nduja\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-nduja::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-prodotti {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/sagra\ prodotti\ tipici\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-prodotti::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-stragusto {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/stragusto\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-stragusto::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-salsiccia {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/sagra\ salsiccia\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-salsiccia::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
+
+.header-contenitore-cuccia {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image:url("../img/sagra\ cuccia\ section\ hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+
+
+}
+
+.header-contenitore-cuccia::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  z-index: 1;
+}
